--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,11 @@
+
+
 :root{
   --cor-de-fundo:  #ebecee ;
+  --branco:#FFFFFF;
 
 }
 
 body{
   background-color: var(--cor-de-fundo);
-}
-
-h1{
-  background-color: aqua;
 }
