--- a/styles/header.css
+++ b/styles/header.css
@@ -3,10 +3,21 @@ width: 24px;
 height: 50px;
 background-image: url(/Alura-Books/img/Menu.svg);
 display: inline-block;
+background-repeat: no-repeat;
+background-position: center;
 }
 
 .cabecalho{
   background-color: var(--branco);
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+}
+.container__imagem{
+  padding: 1em;
 }
